{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 146,
  "lineage": "c6be251e-9a94-ed9d-54e0-662994a96635",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "new-nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0813be797f3687595",
            "domain": "vpc",
            "id": "eipalloc-0813be797f3687595",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-190-64-19.us-east-2.compute.amazonaws.com",
            "public_ip": "18.190.64.19",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "new-nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01572000027884a54",
            "domain": "vpc",
            "id": "eipalloc-01572000027884a54",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-17-42-222.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.42.222",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "new-nat3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a3be634c9bc3797",
            "domain": "vpc",
            "id": "eipalloc-00a3be634c9bc3797",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-52-15-87-223.us-east-2.compute.amazonaws.com",
            "public_ip": "52.15.87.223",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "new_bastion_host-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f19d220602031aed",
            "arn": "arn:aws:ec2:us-east-2:995755031598:instance/i-0d897305590e28036",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d897305590e28036",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-079d120e90ef3f2ce",
            "private_dns": "ip-10-0-1-32.us-east-2.compute.internal",
            "private_ip": "10.0.1.32",
            "public_ip": "3.137.168.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09dfe264e45c4f00d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dec5812843f7e960",
            "tags": {
              "Name": "NEW Bastion Host - 2A",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "NEW Bastion Host - 2A",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0467ea4a6d2ac3aed"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.new_bastion_sg",
            "aws_subnet.new-public-2a",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:995755031598:internet-gateway/igw-0479b4c3386426ff5",
            "id": "igw-0479b4c3386426ff5",
            "owner_id": "995755031598",
            "tags": {
              "Name": "NEW Internet Gateway",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "NEW Internet Gateway",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08f21075b9802107b"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "new_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:995755031598:loadbalancer/app/new-app-load-balancer/6ead73e423ee0495",
            "arn_suffix": "app/new-app-load-balancer/6ead73e423ee0495",
            "dns_name": "new-app-load-balancer-1876007158.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:995755031598:loadbalancer/app/new-app-load-balancer/6ead73e423ee0495",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "new-app-load-balancer",
            "security_groups": [
              "sg-006e5da6b06a4045b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0769cb6bd6dbef35b"
              },
              {
                "subnet_id": "subnet-0a6a48766062090c1"
              }
            ],
            "subnets": [
              "subnet-0769cb6bd6dbef35b",
              "subnet-0a6a48766062090c1"
            ],
            "tags": {
              "Name": "NEW Application Load Balancer",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "NEW Application Load Balancer",
              "Terraform": "True"
            },
            "vpc_id": "vpc-08f21075b9802107b",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.new_alb_sg",
            "aws_subnet.new-public-2b",
            "aws_subnet.new-public-2c",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "new-back-end-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:995755031598:targetgroup/new-back-end-target-group/3fb4db9cd226156a",
            "arn_suffix": "targetgroup/new-back-end-target-group/3fb4db9cd226156a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/healthy.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:995755031598:targetgroup/new-back-end-target-group/3fb4db9cd226156a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "new-back-end-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "NEW Back End Target Group",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "NEW Back End Target Group",
              "Terraform": "True"
            },
            "target_type": "instance",
            "vpc_id": "vpc-08f21075b9802107b"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "new-front-end-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:995755031598:targetgroup/new-front-end-target-group/da543e1f5ea3b10d",
            "arn_suffix": "targetgroup/new-front-end-target-group/da543e1f5ea3b10d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/healthy.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:995755031598:targetgroup/new-front-end-target-group/da543e1f5ea3b10d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "new-front-end-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "NEW Front End Target Group",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "NEW Front End Target Group",
              "Terraform": "True"
            },
            "target_type": "instance",
            "vpc_id": "vpc-08f21075b9802107b"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "new-nat-gateway-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0813be797f3687595",
            "connectivity_type": "public",
            "id": "nat-008f254144b6833ad",
            "network_interface_id": "eni-003e7a47a5d8c36bd",
            "private_ip": "10.0.1.148",
            "public_ip": "18.190.64.19",
            "subnet_id": "subnet-0dec5812843f7e960",
            "tags": {
              "Name": "Nat Gateway-2a",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "Nat Gateway-2a",
              "Terraform": "True"
            }
          },
          "dependencies": [
            "aws_eip.new-nat1",
            "aws_subnet.new-public-2a",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "new-nat-gateway-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01572000027884a54",
            "connectivity_type": "public",
            "id": "nat-034f3bfc1ad43db59",
            "network_interface_id": "eni-0e250d0261091d267",
            "private_ip": "10.0.2.71",
            "public_ip": "3.17.42.222",
            "subnet_id": "subnet-0769cb6bd6dbef35b",
            "tags": {
              "Name": "Nat Gateway-2b",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "Nat Gateway-2b",
              "Terraform": "True"
            }
          },
          "dependencies": [
            "aws_eip.new-nat2",
            "aws_subnet.new-public-2b",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "new-nat-gateway-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a3be634c9bc3797",
            "connectivity_type": "public",
            "id": "nat-09efdbf0e7381acf1",
            "network_interface_id": "eni-0d83b177586201daa",
            "private_ip": "10.0.3.197",
            "public_ip": "52.15.87.223",
            "subnet_id": "subnet-0a6a48766062090c1",
            "tags": {
              "Name": "Nat Gateway-2c",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "Nat Gateway-2c",
              "Terraform": "True"
            }
          },
          "dependencies": [
            "aws_eip.new-nat3",
            "aws_subnet.new-public-2c",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:995755031598:route-table/rtb-07ce524f02757e7d6",
            "id": "rtb-07ce524f02757e7d6",
            "owner_id": "995755031598",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0479b4c3386426ff5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "New Public Route Table",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "New Public Route Table",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f21075b9802107b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new_private_route_table_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:995755031598:route-table/rtb-0daa57a0969c062ca",
            "id": "rtb-0daa57a0969c062ca",
            "owner_id": "995755031598",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-008f254144b6833ad",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "New Private route table 2A",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "New Private route table 2A",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f21075b9802107b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.new-nat1",
            "aws_nat_gateway.new-nat-gateway-2a",
            "aws_subnet.new-public-2a",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new_private_route_table_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:995755031598:route-table/rtb-046122ceeeba3f1fb",
            "id": "rtb-046122ceeeba3f1fb",
            "owner_id": "995755031598",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-034f3bfc1ad43db59",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "New Private route table 2B",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "New Private route table 2B",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f21075b9802107b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.new-nat2",
            "aws_nat_gateway.new-nat-gateway-2b",
            "aws_subnet.new-public-2b",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new_private_route_table_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:995755031598:route-table/rtb-076265df2893c08a2",
            "id": "rtb-076265df2893c08a2",
            "owner_id": "995755031598",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09efdbf0e7381acf1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "New Private route table 2c",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "New Private route table 2c",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f21075b9802107b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.new-nat3",
            "aws_nat_gateway.new-nat-gateway-2c",
            "aws_subnet.new-public-2c",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005404a9b9b63ad09",
            "route_table_id": "rtb-0daa57a0969c062ca",
            "subnet_id": "subnet-0cdef7cd63aa1a282"
          },
          "dependencies": [
            "aws_eip.new-nat1",
            "aws_nat_gateway.new-nat-gateway-2a",
            "aws_route_table.new_private_route_table_2a",
            "aws_subnet.new-private-2a",
            "aws_subnet.new-public-2a",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c17a134bafb4cb17",
            "route_table_id": "rtb-046122ceeeba3f1fb",
            "subnet_id": "subnet-03cb19c89572dabe0"
          },
          "dependencies": [
            "aws_eip.new-nat2",
            "aws_nat_gateway.new-nat-gateway-2b",
            "aws_route_table.new_private_route_table_2b",
            "aws_subnet.new-private-2b",
            "aws_subnet.new-public-2b",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba74fa9ab1cf3f71",
            "route_table_id": "rtb-076265df2893c08a2",
            "subnet_id": "subnet-0b359822b35ae1a87"
          },
          "dependencies": [
            "aws_eip.new-nat3",
            "aws_nat_gateway.new-nat-gateway-2c",
            "aws_route_table.new_private_route_table_2c",
            "aws_subnet.new-private-2c",
            "aws_subnet.new-public-2c",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-public-2a-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d047c2f6d365bee5",
            "route_table_id": "rtb-07ce524f02757e7d6",
            "subnet_id": "subnet-0dec5812843f7e960"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-public",
            "aws_subnet.new-public-2a",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-public-2b-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d82a080fb183c7d3",
            "route_table_id": "rtb-07ce524f02757e7d6",
            "subnet_id": "subnet-0769cb6bd6dbef35b"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-public",
            "aws_subnet.new-public-2b",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-public-2c-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037caf7572a512cc1",
            "route_table_id": "rtb-07ce524f02757e7d6",
            "subnet_id": "subnet-0a6a48766062090c1"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-public",
            "aws_subnet.new-public-2c",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "new_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:995755031598:security-group/sg-006e5da6b06a4045b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006e5da6b06a4045b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20211109202859199800000002",
            "name_prefix": "terraform-",
            "owner_id": "995755031598",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NEW ALB Security Group",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "NEW ALB Security Group",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f21075b9802107b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "new_asg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:995755031598:security-group/sg-067ff5ea8fd9200e5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067ff5ea8fd9200e5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0467ea4a6d2ac3aed"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-006e5da6b06a4045b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20211109202907347300000003",
            "name_prefix": "terraform-",
            "owner_id": "995755031598",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NEW ASG Security Group",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "NEW ASG Security Group",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f21075b9802107b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.new_alb_sg",
            "aws_security_group.new_bastion_sg",
            "aws_vpc.new_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "new_bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:995755031598:security-group/sg-0467ea4a6d2ac3aed",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0467ea4a6d2ac3aed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20211109202859198800000001",
            "name_prefix": "terraform-",
            "owner_id": "995755031598",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NEW Bastion Security Group",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "NEW Bastion Security Group",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f21075b9802107b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "new-private-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:995755031598:subnet/subnet-0cdef7cd63aa1a282",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0cdef7cd63aa1a282",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "995755031598",
            "tags": {
              "Name": "New Private Subnet - 2a",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "New Private Subnet - 2a",
              "Terraform": "True"
            },
            "vpc_id": "vpc-08f21075b9802107b"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "new-private-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:995755031598:subnet/subnet-03cb19c89572dabe0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-03cb19c89572dabe0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "995755031598",
            "tags": {
              "Name": "New Private Subnet - 2B",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "New Private Subnet - 2B",
              "Terraform": "True"
            },
            "vpc_id": "vpc-08f21075b9802107b"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "new-private-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:995755031598:subnet/subnet-0b359822b35ae1a87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0b359822b35ae1a87",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "995755031598",
            "tags": {
              "Name": "NewPrivate Subnet - 2C",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "NewPrivate Subnet - 2C",
              "Terraform": "True"
            },
            "vpc_id": "vpc-08f21075b9802107b"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "new-public-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:995755031598:subnet/subnet-0dec5812843f7e960",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0dec5812843f7e960",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "995755031598",
            "tags": {
              "Name": "New Public Subnet - 2a",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "New Public Subnet - 2a",
              "Terraform": "True"
            },
            "vpc_id": "vpc-08f21075b9802107b"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "new-public-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:995755031598:subnet/subnet-0769cb6bd6dbef35b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0769cb6bd6dbef35b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "995755031598",
            "tags": {
              "Name": "New Public Subnet - 2B",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "New Public Subnet - 2B",
              "Terraform": "True"
            },
            "vpc_id": "vpc-08f21075b9802107b"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "new-public-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:995755031598:subnet/subnet-0a6a48766062090c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0a6a48766062090c1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "995755031598",
            "tags": {
              "Name": "New Public Subnet - 2C",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "New Public Subnet - 2C",
              "Terraform": "True"
            },
            "vpc_id": "vpc-08f21075b9802107b"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:995755031598:vpc/vpc-08f21075b9802107b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07400bee63cbc84f4",
            "default_route_table_id": "rtb-0a8ffd121497b64a7",
            "default_security_group_id": "sg-013b145ff9e8d735c",
            "dhcp_options_id": "dopt-02eaa769",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08f21075b9802107b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a8ffd121497b64a7",
            "owner_id": "995755031598",
            "tags": {
              "Name": "New VPC",
              "Terrafrom": "True"
            },
            "tags_all": {
              "Name": "New VPC",
              "Terrafrom": "True"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}